# HaskellStuff

./: .gitignore  HaskellStuff.cabal  README.md  stack.yaml
Example/: Simple.xml
src/: BlockChain.hs  BookData.hs  BookDataModels.hs  BookModels.hs  BookType.hs  CallByNeed.hs  Circuit.hs  ConfReader.hs  DepTypes.hs  Expr.hs  ExpressionProblem.hs  Fixpoint.hs  FreeMonad.hs  Fun.hs  HxtTest.hs  Lenses.hs  Lexer.x  Main.hs  MonadStuff.hs  MonadStuff2.hs  Parser.y  RedBlackTree.hs  RunQ.hs  ScottyTest.hs  ServantTypes.hs  SingletonTest.hs  StateMachine.hs  Templates.hs  TemplatesTest.hs  ThinkingWithTypes.hs  TypeStuff.hs  Value.hs  VinylTest.hs  YampaTest.hs  fun.c
