name:                HaskellStuff
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HaskellStuff#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HaskellStuff
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -rtsopts -O2
  build-depends:
    base >= 4.7 && < 5,
    text >= 1.2.2.1 && < 1.3,
    scotty >= 0.11 && < 0.12,
    wai-extra >= 3.0.20 && < 3.0.21,
    securemem >= 0.1.9 && < 0.2,
    lens >= 4.15.1 && < 4.16,
    aeson >= 1.2 && < 1.3,
    persistent >= 2.6 && < 3,
    persistent-template >= 2.5.1.6 && < 2.6,
    template-haskell -any,
    time >= 1.8 && < 1.9,
    array >= 0.5 && < 0.6


  build-tools: alex, happy

  other-modules:
    ScottyTest,
    BookModels,
    BookData,
    BookDataModels,
    BookType,
    TypeStuff,
    CallByNeed,
    Lexer,
    Parser,
    Value,
    Expr,
    RedBlackTree,
    Fixpoint,
    RunQ
