cabal-version: >=1.10
name: HaskellStuff
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/HaskellStuff#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

executable HaskellStuff
    main-is: Main.hs
    c-sources:
        src/fun.c
    hs-source-dirs: src
    other-modules:
        TypeStuff
        RedBlackTree
        Fixpoint
        RunQ
        DepTypes
        FreeMonad
        ExpressionProblem
        Fun
        VinylTest
        ServantTypes
        ConfReader
        MonadStuff
        MonadStuff2
        YampaTest
        Circuit
        Lenses
        ThinkingWithTypes
        StateMachine
        HxtTest
        
    default-language: Haskell2010
    ghc-options: -Wall -rtsopts -O2
    build-depends:
        base >=4.7 && <5,
        text >=1.2.2.1 && <1.3,
        securemem >=0.1.9 && <0.2,
        lens -any,
        aeson -any,
        template-haskell -any,
        time >=1.8 && <1.9,
        array >=0.5 && <0.6,
        vinyl -any,
        singletons -any,
        doctest -any,
        binary -any,
        unordered-containers -any,
        transformers -any,
        mtl -any,
        megaparsec -any,
        Yampa -any,
        random -any,
        hxt,
        ghc -any
